@@ -5,6 +5,7 @@
 	--------------------------------------------------------------------
 	SPDX-FileCopyrightText: 2022 Martin Marmsoler <martin.marmsoler@gmail.com>
 	SPDX-FileCopyrightText: 2022 Stefan Gerlach <stefan.gerlach@uni.kn>
+	SPDX-FileCopyrightText: 2022-2023 Alexander Semke <alexander.semke@web.de>
 
 	SPDX-License-Identifier: GPL-2.0-or-later
 */
@@ -15,6 +16,7 @@
 #include "backend/core/column/ColumnPrivate.h"
 #include "backend/lib/XmlStreamReader.h"
 #include "backend/lib/trace.h"
+#include "backend/spreadsheet/Spreadsheet.h"
 
 #include <QUndoStack>
 
@@ -486,6 +488,115 @@ void ColumnTest::statisticsText() {
 
 	QCOMPARE(stats.size, 5);
 	QCOMPARE(stats.unique, 2);
+}
+
+void ColumnTest::testFormulaAutoUpdateEnabled() {
+	Column sourceColumn(QStringLiteral("source"), Column::ColumnMode::Integer);
+	sourceColumn.setIntegers({1, 2, 3});
+
+	Column targetColumn(QStringLiteral("target"), Column::ColumnMode::Integer);
+	targetColumn.setIntegers({3, 2, 1});
+
+	// evaluatue 2*x and check the generated values in the target column
+	targetColumn.setColumnMode(AbstractColumn::ColumnMode::Double);
+	targetColumn.setFormula(QStringLiteral("2*x"),
+							QStringList{QStringLiteral("x")},
+							QVector{&sourceColumn},
+							true /* autoUpdate */,
+							false /* autoResize */);
+	targetColumn.updateFormula();
+	QCOMPARE(targetColumn.rowCount(), 3);
+	QCOMPARE(targetColumn.valueAt(0), 2);
+	QCOMPARE(targetColumn.valueAt(1), 4);
+	QCOMPARE(targetColumn.valueAt(2), 6);
+
+	// modify value in the source column and check the target column again which should be updated
+	sourceColumn.setIntegers({3, 2, 1});
+	QCOMPARE(targetColumn.rowCount(), 3);
+	QCOMPARE(targetColumn.valueAt(0), 6);
+	QCOMPARE(targetColumn.valueAt(1), 4);
+	QCOMPARE(targetColumn.valueAt(2), 2);
+}
+
+void ColumnTest::testFormulaAutoUpdateDisabled() {
+	Column sourceColumn(QStringLiteral("source"), Column::ColumnMode::Integer);
+	sourceColumn.setIntegers({1, 2, 3});
+
+	Column targetColumn(QStringLiteral("target"), Column::ColumnMode::Integer);
+	targetColumn.setIntegers({3, 2, 1});
+
+	// evaluatue 2*x and check the generated values in the target column
+	targetColumn.setColumnMode(AbstractColumn::ColumnMode::Double);
+	targetColumn.setFormula(QStringLiteral("2*x"),
+							QStringList{QStringLiteral("x")},
+							QVector{&sourceColumn},
+							false /* autoUpdate */,
+							false /* autoResize */);
+	targetColumn.updateFormula();
+	QCOMPARE(targetColumn.rowCount(), 3);
+	QCOMPARE(targetColumn.valueAt(0), 2);
+	QCOMPARE(targetColumn.valueAt(1), 4);
+	QCOMPARE(targetColumn.valueAt(2), 6);
+
+	// modify value in the source column and check the target column again which shouldn't be updated
+	sourceColumn.setIntegers({3, 2, 1});
+	QCOMPARE(targetColumn.rowCount(), 3);
+	QCOMPARE(targetColumn.valueAt(0), 2);
+	QCOMPARE(targetColumn.valueAt(1), 4);
+	QCOMPARE(targetColumn.valueAt(2), 6);
+}
+
+void ColumnTest::testFormulaAutoResizeEnabled() {
+	Column sourceColumn1(QStringLiteral("source1"), Column::ColumnMode::Integer);
+	sourceColumn1.setIntegers({1, 2, 3});
+
+	Column sourceColumn2(QStringLiteral("source2"), Column::ColumnMode::Integer);
+	sourceColumn2.setIntegers({1, 2, 3});
+
+	// spreadsheet needs to be created since the resize of the column is happening via the resize of the spreadsheet
+	Spreadsheet targetSpreadsheet(QStringLiteral("target"));
+	targetSpreadsheet.setColumnCount(1);
+	targetSpreadsheet.setRowCount(1);
+	Column* targetColumn = targetSpreadsheet.column(0);
+
+	// evaluatue x+y
+	targetColumn->setColumnMode(AbstractColumn::ColumnMode::Double);
+	targetColumn->setFormula(QStringLiteral("x+y"),
+							QStringList{QStringLiteral("x"), QStringLiteral("y")},
+							QVector{&sourceColumn1, &sourceColumn2},
+							false /* autoUpdate */,
+							true /* autoResize */);
+	targetColumn->updateFormula();
+
+	// check the generated values in the target column which should have been resized
+	QCOMPARE(targetColumn->rowCount(), 3);
+	QCOMPARE(targetColumn->valueAt(0), 2);
+	QCOMPARE(targetColumn->valueAt(1), 4);
+	QCOMPARE(targetColumn->valueAt(2), 6);
+}
+
+void ColumnTest::testFormulaAutoResizeDisabled() {
+	Column sourceColumn1(QStringLiteral("source1"), Column::ColumnMode::Integer);
+	sourceColumn1.setIntegers({1, 2, 3});
+
+	Column sourceColumn2(QStringLiteral("source2"), Column::ColumnMode::Integer);
+	sourceColumn2.setIntegers({1, 2, 3});
+
+	Column targetColumn(QStringLiteral("target"), Column::ColumnMode::Integer);
+	targetColumn.setIntegers({1});
+
+	// evaluatue x+y
+	targetColumn.setColumnMode(AbstractColumn::ColumnMode::Double);
+	targetColumn.setFormula(QStringLiteral("x+y"),
+							QStringList{QStringLiteral("x"), QStringLiteral("y")},
+							QVector{&sourceColumn1, &sourceColumn2},
+							false /* autoUpdate */,
+							false /* autoResize */);
+	targetColumn.updateFormula();
+
+	// check the generated values in the target column which should not have been resized
+	QCOMPARE(targetColumn.rowCount(), 1);
+	QCOMPARE(targetColumn.valueAt(0), 2);
 }
 
 void ColumnTest::testDictionaryIndex() {
