@@ -13,6 +13,7 @@ New features:
 		* Column statistics spreadsheet - child spreadsheet showing various statistical properties of the parent spreadsheet
 		* Remove/mask rows with missing values
 		* Allow to sort the whole spreadsheet even if one single column was selected, use it rather as the key sort column
+		* When generating values via a function, allow to control whether the target spreadsheet should be resized to the size of the variable columns
 	* [notebook]
 		* Export to PDF
 	* [import]
